Use raw conan calls instead of package tools
Now the template supports custom settings and options

--- a/ci_template.yml
+++ b/ci_template.yml
@@ -7,6 +7,16 @@ packages:
   - libcxx
   - clang
 
+options:
+  shared:
+    - True
+    - False
+
+settings:
+  build_type:
+    - Debug
+    - Release
+
 channel:
   user: Manu343726
   channel: testing
