Change layout of generated recipes for python modules
See https://github.com/conan-io/conan/issues/2906#issuecomment-390962503

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -356,12 +356,13 @@ build_clang_3.8.0_gcc7_build_type=Release+shared=True:
 build_clang_conan_tools/0.1@Manu343726/testing:
   image: lasote/conangcc5
   script:
-  - ./common_recipe_scripts_package_generator.py clang_conan_tools 0.1 Manu343726
-    testing --with-test --url "https://gitlab.com/Manu343726/clang-conan-packages"
-  - cat -n clang_conan_tools/conanfile.py
-  - cat -n clang_conan_tools/test_package/conanfile.py
-  - conan create clang_conan_tools Manu343726/testing
+  - export RECIPE_DIR=`./common_recipe_scripts_package_generator.py clang_conan_tools
+    0.1 Manu343726 testing --with-test --url "https://gitlab.com/Manu343726/clang-conan-packages"`
+  - cat -n $RECIPE_DIR/conanfile.py
+  - cat -n $RECIPE_DIR/test_package/conanfile.py
+  - conan create $RECIPE_DIR Manu343726/testing
   - conan upload clang_conan_tools/0.1@Manu343726/testing --all --force --retry 3
+    -r Manu343726
   stage: common-recipe-scripts
   tags:
   - linux
