Add CI stage to deploy llvm sources to bintray

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1267,8 +1267,61 @@ build_llvm_3.8.0_gcc7_build_type=Release+shared=True:
   tags:
   - linux
   - docker
+deploy-sources-to-bintray:
+  image: lasote/conangcc5
+  script:
+  - ./get_jfrog.sh && ./jfrog bt config --interactive=false --user=Manu343726 --key=$manu343726_bintray_key
+    --licenses="MIT"
+  - export LLVM_URL=http://releases.llvm.org EXT=.src.tar.xz
+  - export COMPONENT=llvm VERSION=3.8.0 && ./llvm-sources.sh $COMPONENT $VERSION ${LLVM_URL}/${VERSION}/${COMPONENT}-${VERSION}${EXT}
+  - export COMPONENT=llvm VERSION=3.9.0 && ./llvm-sources.sh $COMPONENT $VERSION ${LLVM_URL}/${VERSION}/${COMPONENT}-${VERSION}${EXT}
+  - export COMPONENT=llvm VERSION=4.0.0 && ./llvm-sources.sh $COMPONENT $VERSION ${LLVM_URL}/${VERSION}/${COMPONENT}-${VERSION}${EXT}
+  - export COMPONENT=llvm VERSION=5.0.0 && ./llvm-sources.sh $COMPONENT $VERSION ${LLVM_URL}/${VERSION}/${COMPONENT}-${VERSION}${EXT}
+  - export COMPONENT=llvm VERSION=6.0.0 && ./llvm-sources.sh $COMPONENT $VERSION ${LLVM_URL}/${VERSION}/${COMPONENT}-${VERSION}${EXT}
+  - export COMPONENT=compiler-rt VERSION=3.8.0 && ./llvm-sources.sh $COMPONENT $VERSION
+    ${LLVM_URL}/${VERSION}/${COMPONENT}-${VERSION}${EXT}
+  - export COMPONENT=compiler-rt VERSION=3.9.0 && ./llvm-sources.sh $COMPONENT $VERSION
+    ${LLVM_URL}/${VERSION}/${COMPONENT}-${VERSION}${EXT}
+  - export COMPONENT=compiler-rt VERSION=4.0.0 && ./llvm-sources.sh $COMPONENT $VERSION
+    ${LLVM_URL}/${VERSION}/${COMPONENT}-${VERSION}${EXT}
+  - export COMPONENT=compiler-rt VERSION=5.0.0 && ./llvm-sources.sh $COMPONENT $VERSION
+    ${LLVM_URL}/${VERSION}/${COMPONENT}-${VERSION}${EXT}
+  - export COMPONENT=compiler-rt VERSION=6.0.0 && ./llvm-sources.sh $COMPONENT $VERSION
+    ${LLVM_URL}/${VERSION}/${COMPONENT}-${VERSION}${EXT}
+  - export COMPONENT=libcxx VERSION=3.8.0 && ./llvm-sources.sh $COMPONENT $VERSION
+    ${LLVM_URL}/${VERSION}/${COMPONENT}-${VERSION}${EXT}
+  - export COMPONENT=libcxx VERSION=3.9.0 && ./llvm-sources.sh $COMPONENT $VERSION
+    ${LLVM_URL}/${VERSION}/${COMPONENT}-${VERSION}${EXT}
+  - export COMPONENT=libcxx VERSION=4.0.0 && ./llvm-sources.sh $COMPONENT $VERSION
+    ${LLVM_URL}/${VERSION}/${COMPONENT}-${VERSION}${EXT}
+  - export COMPONENT=libcxx VERSION=5.0.0 && ./llvm-sources.sh $COMPONENT $VERSION
+    ${LLVM_URL}/${VERSION}/${COMPONENT}-${VERSION}${EXT}
+  - export COMPONENT=libcxx VERSION=6.0.0 && ./llvm-sources.sh $COMPONENT $VERSION
+    ${LLVM_URL}/${VERSION}/${COMPONENT}-${VERSION}${EXT}
+  - export COMPONENT=clang VERSION=3.8.0 && ./llvm-sources.sh $COMPONENT $VERSION
+    ${LLVM_URL}/${VERSION}/cfe-${VERSION}${EXT}
+  - export COMPONENT=clang VERSION=3.9.0 && ./llvm-sources.sh $COMPONENT $VERSION
+    ${LLVM_URL}/${VERSION}/cfe-${VERSION}${EXT}
+  - export COMPONENT=clang VERSION=4.0.0 && ./llvm-sources.sh $COMPONENT $VERSION
+    ${LLVM_URL}/${VERSION}/cfe-${VERSION}${EXT}
+  - export COMPONENT=clang VERSION=5.0.0 && ./llvm-sources.sh $COMPONENT $VERSION
+    ${LLVM_URL}/${VERSION}/cfe-${VERSION}${EXT}
+  - export COMPONENT=clang VERSION=6.0.0 && ./llvm-sources.sh $COMPONENT $VERSION
+    ${LLVM_URL}/${VERSION}/cfe-${VERSION}${EXT}
+  - export COMPONENT=clang-tools-extra VERSION=3.8.0 && ./llvm-sources.sh $COMPONENT
+    $VERSION ${LLVM_URL}/${VERSION}/${COMPONENT}-${VERSION}${EXT}
+  - export COMPONENT=clang-tools-extra VERSION=3.9.0 && ./llvm-sources.sh $COMPONENT
+    $VERSION ${LLVM_URL}/${VERSION}/${COMPONENT}-${VERSION}${EXT}
+  - export COMPONENT=clang-tools-extra VERSION=4.0.0 && ./llvm-sources.sh $COMPONENT
+    $VERSION ${LLVM_URL}/${VERSION}/${COMPONENT}-${VERSION}${EXT}
+  - export COMPONENT=clang-tools-extra VERSION=5.0.0 && ./llvm-sources.sh $COMPONENT
+    $VERSION ${LLVM_URL}/${VERSION}/${COMPONENT}-${VERSION}${EXT}
+  - export COMPONENT=clang-tools-extra VERSION=6.0.0 && ./llvm-sources.sh $COMPONENT
+    $VERSION ${LLVM_URL}/${VERSION}/${COMPONENT}-${VERSION}${EXT}
+  stage: sources
 stages:
 - common-recipe-scripts
+- sources
 - llvm
 - compiler-rt
 - libcxx
