Simplify llvm and clang cmake flags. Include gcc 8 build

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -56,6 +56,23 @@ build_clang_6.0.0_gcc7_build_type=Release+shared=True:
   tags:
   - linux
   - docker
+build_clang_6.0.0_gcc8_build_type=Release+shared=True:
+  dependencies:
+  - build_llvm_6.0.0_gcc8_build_type=Release+shared=True
+  - build_compiler-rt_6.0.0_gcc8_build_type=Release+shared=True
+  - build_libcxx_6.0.0_gcc8_build_type=Release+shared=True
+  image: lasote/conangcc8
+  script:
+  - conan profile update settings.build_type=Release default
+  - CONAN_VERSION_OVERRIDE=6.0.0 conan create --profile=default -o llvm:shared=True
+    -o compiler-rt:shared=True -o libcxx:shared=True -o clang:shared=True clang Manu343726/testing
+  - conan remove -b -s -f "*"
+  - conan upload clang/6.0.0@Manu343726/testing -r Manu343726 --all --force --retry
+    3
+  stage: clang
+  tags:
+  - linux
+  - docker
 build_clang_conan_tools/0.3@Manu343726/testing:
   image: lasote/conangcc5
   script:
@@ -115,6 +132,21 @@ build_compiler-rt_6.0.0_gcc7_build_type=Release+shared=True:
   tags:
   - linux
   - docker
+build_compiler-rt_6.0.0_gcc8_build_type=Release+shared=True:
+  dependencies:
+  - build_llvm_6.0.0_gcc8_build_type=Release+shared=True
+  image: lasote/conangcc8
+  script:
+  - conan profile update settings.build_type=Release default
+  - CONAN_VERSION_OVERRIDE=6.0.0 conan create --profile=default -o llvm:shared=True
+    -o compiler-rt:shared=True compiler-rt Manu343726/testing
+  - conan remove -b -s -f "*"
+  - conan upload compiler-rt/6.0.0@Manu343726/testing -r Manu343726 --all --force
+    --retry 3
+  stage: compiler-rt
+  tags:
+  - linux
+  - docker
 build_libcxx_6.0.0_clang60_build_type=Release+shared=True:
   dependencies:
   - build_llvm_6.0.0_clang60_build_type=Release+shared=True
@@ -163,6 +195,22 @@ build_libcxx_6.0.0_gcc7_build_type=Release+shared=True:
   tags:
   - linux
   - docker
+build_libcxx_6.0.0_gcc8_build_type=Release+shared=True:
+  dependencies:
+  - build_llvm_6.0.0_gcc8_build_type=Release+shared=True
+  - build_compiler-rt_6.0.0_gcc8_build_type=Release+shared=True
+  image: lasote/conangcc8
+  script:
+  - conan profile update settings.build_type=Release default
+  - CONAN_VERSION_OVERRIDE=6.0.0 conan create --profile=default -o llvm:shared=True
+    -o compiler-rt:shared=True -o libcxx:shared=True libcxx Manu343726/testing
+  - conan remove -b -s -f "*"
+  - conan upload libcxx/6.0.0@Manu343726/testing -r Manu343726 --all --force --retry
+    3
+  stage: libcxx
+  tags:
+  - linux
+  - docker
 build_llvm_6.0.0_clang60_build_type=Release+shared=True:
   dependencies: []
   image: lasote/conanclang60
@@ -194,6 +242,20 @@ build_llvm_6.0.0_gcc5_build_type=Release+shared=True:
 build_llvm_6.0.0_gcc7_build_type=Release+shared=True:
   dependencies: []
   image: lasote/conangcc7
+  script:
+  - conan profile update settings.build_type=Release default
+  - CONAN_VERSION_OVERRIDE=6.0.0 conan create --profile=default -o llvm:shared=True
+    llvm Manu343726/testing
+  - conan remove -b -s -f "*"
+  - conan upload llvm/6.0.0@Manu343726/testing -r Manu343726 --all --force --retry
+    3
+  stage: llvm
+  tags:
+  - linux
+  - docker
+build_llvm_6.0.0_gcc8_build_type=Release+shared=True:
+  dependencies: []
+  image: lasote/conangcc8
   script:
   - conan profile update settings.build_type=Release default
   - CONAN_VERSION_OVERRIDE=6.0.0 conan create --profile=default -o llvm:shared=True
